--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
         <div class="bucket img1-t2 center">코딩수업 완료하기</div>
-        <div class="bucket img2 center">블로그 만들기</div>
+        <div class="bucket img2 center">준규형 애인만들기</div>
         <div class="bucket img2 center">다이어트 하기</div>
         <div class="bucket img1-t4 center">일본어 공부하기</div>
         <div class="bucket img1 center">전자책만들기</div>
